// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ IssueEditor ]] [[ Renders IssueEditor ]] 1`] = `
"<div createdat=\\"2020-07-09T08:52:13.924241+00:00\\" modifiedat=\\"2020-07-09T08:52:13.924250+00:00\\" openaccordion=\\"true\\">
  <z-accordion-item is-open=\\"true\\" span-custom-height=\\"\\" custom-max-height=\\"max-h-full\\" class=\\"w-full rounded-md border border-slate-400\\"></z-accordion-item>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`[[ IssueEditor ]] [[ Renders IssueEditor ]] 2`] = `
"<div createdat=\\"2020-07-09T08:52:13.924241+00:00\\" modifiedat=\\"2020-07-09T08:52:13.924250+00:00\\" openaccordion=\\"true\\">
  <z-accordion-item is-open=\\"true\\" span-custom-height=\\"\\" custom-max-height=\\"max-h-full\\" class=\\"w-full rounded-md border border-slate-400\\"></z-accordion-item>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`[[ IssueEditor ]] [[ Renders IssueEditor ]] 3`] = `
"<div createdat=\\"2020-07-09T08:52:13.924241+00:00\\" modifiedat=\\"2020-07-09T08:52:13.924250+00:00\\">
  <z-accordion-item is-open=\\"true\\" span-custom-height=\\"\\" custom-max-height=\\"max-h-full\\" class=\\"w-full rounded-md border border-slate-400\\"></z-accordion-item>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`[[ IssueEditor ]] [[ Renders IssueEditor ]] 4`] = `
"<div createdat=\\"2020-07-09T08:52:13.924241+00:00\\" modifiedat=\\"2020-07-09T08:52:13.924250+00:00\\">
  <z-accordion-item is-open=\\"true\\" span-custom-height=\\"\\" custom-max-height=\\"max-h-full\\" class=\\"w-full rounded-md border border-slate-400\\"></z-accordion-item>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`[[ IssueEditor ]] [[ Renders IssueEditor ]] 5`] = `
"<div createdat=\\"2020-07-09T08:52:13.924241+00:00\\" modifiedat=\\"2020-07-09T08:52:13.924250+00:00\\" openaccordion=\\"true\\">
  <z-accordion-item is-open=\\"true\\" span-custom-height=\\"\\" custom-max-height=\\"max-h-full\\" class=\\"w-full rounded-md border border-slate-400\\"></z-accordion-item>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`[[ IssueEditor ]] [[ Renders IssueEditor ]] 6`] = `
"<div createdat=\\"2020-07-09T08:52:13.924241+00:00\\" modifiedat=\\"2020-07-09T08:52:13.924250+00:00\\" openaccordion=\\"true\\">
  <z-accordion-item is-open=\\"true\\" span-custom-height=\\"\\" custom-max-height=\\"max-h-full\\" class=\\"w-full rounded-md border border-slate-400\\"></z-accordion-item>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`[[ IssueEditor ]] [[ Renders IssueEditor ]] 7`] = `
"<div createdat=\\"2020-07-09T08:52:13.924241+00:00\\" modifiedat=\\"2020-07-09T08:52:13.924250+00:00\\">
  <z-accordion-item is-open=\\"true\\" span-custom-height=\\"\\" custom-max-height=\\"max-h-full\\" class=\\"w-full rounded-md border border-slate-400\\"></z-accordion-item>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`[[ IssueEditor ]] [[ Renders IssueEditor ]] 8`] = `
"<div createdat=\\"2020-07-09T08:52:13.924241+00:00\\" modifiedat=\\"2020-07-09T08:52:13.924250+00:00\\">
  <z-accordion-item is-open=\\"true\\" span-custom-height=\\"\\" custom-max-height=\\"max-h-full\\" class=\\"w-full rounded-md border border-slate-400\\"></z-accordion-item>
  <!---->
  <!---->
  <!---->
</div>"
`;
